remove position relative from .hero css

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -129,7 +129,7 @@ header nav li {
 /*Hero Styles*/
 
 .hero {
-	position: relative;
+	/* position: relative; */
 	justify-content: center;
 	text-align: center;
 	min-height: 100vh;
